# experiment-gate

./: .env.example  CHANGELOG.md  README.md  pyproject.toml
config/: defaults.yaml
config/personas/: gate_personas.json
examples/: sample_gate_request.json
experiment_gate/: __init__.py  __main__.py  cli.py  consolidator.py  discovery.py  evaluator.py  extractor.py  gate_pipeline.py  persona_registry.py  pipeline.py  request_loader.py  request_normalizer.py  response_builder.py  result_formatter.py  runner.py  schemas.py  scorer.py  summarizer.py  unitizer.py
experiment_gate/router/: __init__.py  config.py  density_estimator.py  fallback.py  lead_persona.py  validator.py
skills/claude/: SKILL.md
skills/codex/: SKILL.md
tests/: test_cli.py  test_cli_pdf.py  test_gate.py  test_insight_agent.py  test_llm_openrouter.py  test_performance_refactor.py  test_response_builder.py  test_result_formatter.py  test_router.py  test_runner.py  test_runtime_config.py  test_source_loader.py
